--- a/first_week/mg.ipynb
+++ b/first_week/mg.ipynb
@@ -433,12 +433,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dff75296",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_total' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_total\u001b[49m.to_csv(\u001b[33m'\u001b[39m\u001b[33mdata_csv/강원도_사업체_공간집계정보.csv\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_total' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df_total.to_csv('강원도_사업체_공간집계정보.csv')"
+    "df_total.to_csv('data_csv/강원도_사업체_공간집계정보.csv')"
    ]
   },
   {
