--- a/first_week/mg.ipynb
+++ b/first_week/mg.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "08bfefbc",
+   "execution_count": 3,
+   "id": "a9ce7aaf",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
       "Python Executable: /usr/bin/pypy\n",
       "Python Version: 3.6.9\n",
       "Python Path: ['/home/dataserving_nowcast', '/opt/pypy3.6-v7.3.0-linux64/bin', '/opt/pypy3.6-v7.3.0-linux64/lib_pypy/__extensions__', '/opt/pypy3.6-v7.3.0-linux64/lib_pypy', '/opt/pypy3.6-v7.3.0-linux64/lib-python/3', '/opt/pypy3.6-v7.3.0-linux64/lib-python/3/lib-tk', '/opt/pypy3.6-v7.3.0-linux64/lib-python/3/plat-linux2', '/opt/pypy3.6-v7.3.0-linux64/site-packages']\n",
-      "Server time: 토요일, 8 11월 2025 15:21:46 +0000\n",
+      "Server time: 토요일, 8 11월 2025 17:05:53 +0000\n",
       "Installed Applications:\n",
       "['django.contrib.auth',\n",
       " 'django.contrib.contenttypes',\n",
@@ -137,28 +137,28 @@
       "\n",
       "META:\n",
       "HTTP_ACCEPT = '*/*'\n",
-      "HTTP_ACCEPT_ENCODING = 'gzip, deflate, zstd'\n",
-      "HTTP_APICODE = '5cb4b0d3-1cd9-4435-963f-9ac519182b3f'\n",
+      "HTTP_ACCEPT_ENCODING = 'gzip, deflate'\n",
+      "HTTP_APICODE = '8eef3c61-4434-4633-8090-d57410d756a0'\n",
       "HTTP_CONNECTION = 'close'\n",
       "HTTP_HOST = 'localhost:8081'\n",
-      "HTTP_TRANSACTION_ID = '4dc413d9ea9a48cda948cb0bcb3e44e5'\n",
-      "HTTP_USER_AGENT = 'python-requests/2.32.5'\n",
-      "HTTP_X_FORWARDED_FOR = '218.39.94.227'\n",
+      "HTTP_TRANSACTION_ID = 'c21e93e1d7cd4bc29b56b9652acffb7f'\n",
+      "HTTP_USER_AGENT = 'python-requests/2.32.4'\n",
+      "HTTP_X_FORWARDED_FOR = '207.46.224.86'\n",
       "PATH_INFO = '/data/'\n",
       "QUERY_STRING = 'dataset_key=DATASET_SUNDO_11&from=28500&to=28999'\n",
       "RAW_URI = '/data/?dataset_key=DATASET_SUNDO_11&from=28500&to=28999'\n",
       "REMOTE_ADDR = '127.0.0.1'\n",
-      "REMOTE_PORT = '28235'\n",
+      "REMOTE_PORT = '29499'\n",
       "REQUEST_METHOD = 'GET'\n",
       "SCRIPT_NAME = ''\n",
       "SERVER_NAME = '0.0.0.0'\n",
       "SERVER_PORT = '8081'\n",
       "SERVER_PROTOCOL = 'HTTP/1.0'\n",
       "SERVER_SOFTWARE = 'gunicorn/20.0.4'\n",
-      "gunicorn.socket = <socket.socket fd=12, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('127.0.0.1', 8081), raddr=('127.0.0.1', 28235)>\n",
-      "wsgi.errors = <gunicorn.http.wsgi.WSGIErrorsWrapper object at 0x00007f3d509b9868>\n",
+      "gunicorn.socket = <socket.socket fd=12, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('127.0.0.1', 8081), raddr=('127.0.0.1', 29499)>\n",
+      "wsgi.errors = <gunicorn.http.wsgi.WSGIErrorsWrapper object at 0x00007f3d518e0aa0>\n",
       "wsgi.file_wrapper = ''\n",
-      "wsgi.input = <gunicorn.http.body.Body object at 0x00007f3d509b9e88>\n",
+      "wsgi.input = <gunicorn.http.body.Body object at 0x00007f3d518e0fe0>\n",
       "wsgi.input_terminated = True\n",
       "wsgi.multiprocess = True\n",
       "wsgi.multithread = False\n",
@@ -443,6 +443,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "896410b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dotenv\n",
+      "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
+      "Collecting python-dotenv (from dotenv)\n",
+      "  Downloading python_dotenv-1.2.1-py3-none-any.whl.metadata (25 kB)\n",
+      "Downloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
+      "Downloading python_dotenv-1.2.1-py3-none-any.whl (21 kB)\n",
+      "Installing collected packages: python-dotenv, dotenv\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [dotenv]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed dotenv-0.9.9 python-dotenv-1.2.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install dotenv "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "aff64a40",
    "metadata": {},
@@ -497,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
