--- a/first_week/11_09_mg.ipynb
+++ b/first_week/11_09_mg.ipynb
@@ -359,14 +359,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "32ee8d1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, d in enumerate(data_gen):\n",
-    "    print(i, d)\n",
-    "    if i >10:break"
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import time # API 서버 부하를 줄이기 위해 time 라이브러리 추가\n",
+    "\n",
+    "# --- dotenv 설정 ---\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"kangwon_business_area\") \n",
+    "\n",
+    "if not api_key:\n",
+    "    print(\"❌ 오류: .env 파일에서 'kangwon_business_area' 키를 찾을 수 없습니다.\")\n",
+    "else:\n",
+    "    url = \"https://dataapi.wehago.com/data/\"\n",
+    "    headers = {\n",
+    "        \"apicode\": api_key\n",
+    "    }\n",
+    "    \n",
+    "    # --- 반복문 로직 ---\n",
+    "    all_data_list = []  # 모든 데이터를 저장할 빈 리스트 (장바구니)\n",
+    "    start_index = 0\n",
+    "    chunk_size = 500    # 한 번에 요청할 개수 (0~499는 500개)\n",
+    "\n",
+    "    print(\"데이터 수집을 시작합니다...\")\n",
+    "\n",
+    "    while True:\n",
+    "        # 1. 'from'과 'to' 파라미터를 동적으로 설정\n",
+    "        params = {\n",
+    "            \"dataset_key\": \"DATASET_SUNDO_11\",\n",
+    "            \"from\": start_index,\n",
+    "            \"to\": start_index + chunk_size - 1\n",
+    "        }\n",
+    "        \n",
+    "        print(f\"  -> {start_index}부터 {start_index + chunk_size - 1}까지 요청 중...\")\n",
+    "\n",
+    "        try:\n",
+    "            response = requests.get(url, headers=headers, params=params)\n",
+    "\n",
+    "            if response.status_code == 200:\n",
+    "                data = response.json()\n",
+    "                \n",
+    "                # 2. 'data' 키에서 실제 데이터 리스트를 가져옴\n",
+    "                data_chunk = data.get('data') # .get()을 사용하면 'data' 키가 없어도 오류 안남\n",
+    "\n",
+    "                # 3. 데이터가 비어있는지 확인\n",
+    "                if not data_chunk:\n",
+    "                    # 서버가 빈 리스트([])를 반환하면, 더 이상 데이터가 없다는 의미\n",
+    "                    print(\"✅ 모든 데이터를 수집했습니다. 반복을 종료합니다.\")\n",
+    "                    break\n",
+    "                \n",
+    "                # 4. (중요) 가져온 데이터를 '장바구니' 리스트에 추가\n",
+    "                all_data_list.extend(data_chunk)\n",
+    "                \n",
+    "                # 5. 다음 루프를 위해 시작 인덱스 업데이트\n",
+    "                start_index += chunk_size\n",
+    "                \n",
+    "                # (권장) API 서버에 대한 예의로, 요청 사이에 짧은 휴식 추가\n",
+    "                time.sleep(0.1) # 0.1초 대기\n",
+    "\n",
+    "            else:\n",
+    "                # API 호출 자체가 실패한 경우 (400, 404, 500 등)\n",
+    "                print(f\"❌ 오류 발생 (Status Code: {response.status_code})\")\n",
+    "                print(response.text)\n",
+    "                break # 오류 발생 시 반복 중단\n",
+    "\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            print(f\"연결 중 오류가 발생했습니다: {e}\")\n",
+    "            break # 오류 발생 시 반복 중단\n",
+    "\n",
+    "    # --- 반복문 종료 후 ---\n",
+    "    if all_data_list:\n",
+    "        # 6. '장바구니'에 모아둔 모든 데이터를 하나의 DataFrame으로 변환\n",
+    "        df_total = pd.DataFrame(all_data_list)\n",
+    "        \n",
+    "        print(\"\\n--- 최종 DataFrame 변환 결과 ---\")\n",
+    "        print(f\"총 {len(df_total)}개의 행(row)을 가져왔습니다.\")\n",
+    "        print(df_total.head())\n",
+    "    else:\n",
+    "        print(\"\\n가져온 데이터가 없습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0e5a7fe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 수집을 시작합니다...\n",
+      "  -> 0부터 499까지 요청 중...\n",
+      "  -> 500부터 999까지 요청 중...\n",
+      "  -> 1000부터 1499까지 요청 중...\n",
+      "✅ 모든 데이터를 수집했습니다. 반복을 종료합니다.\n",
+      "\n",
+      "--- 최종 DataFrame 변환 결과 ---\n",
+      "총 512개의 행(row)을 가져왔습니다.\n",
+      "   index  ANN_SALARY_AMT_SUBSUM CTPRVN_CODE SIGNGU_CODE EMD_CODE STLE_SE_CODE  \\\n",
+      "0      0                   22.0          10          54      1.0            I   \n",
+      "1      1                   22.0          10          56      1.0            I   \n",
+      "2      2                   22.0          10          59      1.0            I   \n",
+      "3      3                   22.0          10          61      1.0            I   \n",
+      "4      4                   22.0          10          62      1.0            I   \n",
+      "\n",
+      "  INDUST_LCLAS_CODE MAIN_INDUST_SCLAS_CODE ONLINE_TRADE_EXST_ENNC  \\\n",
+      "0              55.0                      N                 7699.0   \n",
+      "1              55.0                      N                39039.0   \n",
+      "2              55.0                      N                40569.0   \n",
+      "3              55.0                      N                 3933.0   \n",
+      "4              55.0                      N                 3672.0   \n",
+      "\n",
+      "   BULD_TOTAL_SUM  ...  BULD_LEASE_TOTAL  ROOM_CNT  SELNG_AMT  \\\n",
+      "0          5712.0  ...             345.0    2595.0     2595.0   \n",
+      "1          6739.0  ...             824.0   17970.0    17970.0   \n",
+      "2         31511.0  ...            1682.0    9831.0     9831.0   \n",
+      "3          3669.0  ...             217.0     612.0      612.0   \n",
+      "4          1915.0  ...             150.0     422.0      422.0   \n",
+      "\n",
+      "   MAIN_INDUST_ICME  MAIN_INDUST_ELSE_ICME  BSN_COST  LEASE_CHRGE  \\\n",
+      "0               0.0                 1696.0     312.0         45.0   \n",
+      "1               0.0                16482.0     122.0          2.0   \n",
+      "2               0.0                 7253.0     389.0         73.0   \n",
+      "3               0.0                  284.0       4.0          0.0   \n",
+      "4               0.0                  329.0      15.0          1.0   \n",
+      "\n",
+      "   ADVRTS_COST  BSN_PROFIT  SEEM_WORKER_SUM  \n",
+      "0        899.0         9.0             36.0  \n",
+      "1       1488.0        26.0            121.0  \n",
+      "2       2578.0        61.0            200.0  \n",
+      "3        328.0        13.0             21.0  \n",
+      "4         93.0        10.0             19.0  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import time # API 서버 부하를 줄이기 위해 time 라이브러리 추가\n",
+    "\n",
+    "# --- dotenv 설정 ---\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"kangwon_living\") \n",
+    "\n",
+    "if not api_key:\n",
+    "    print(\"❌ 오류: .env 파일에서 'kangwon_business_area' 키를 찾을 수 없습니다.\")\n",
+    "else:\n",
+    "    url = \"https://dataapi.wehago.com/data/\"\n",
+    "    headers = {\n",
+    "        \"apicode\": api_key\n",
+    "    }\n",
+    "    \n",
+    "    # --- 반복문 로직 ---\n",
+    "    all_data_list = []  # 모든 데이터를 저장할 빈 리스트 (장바구니)\n",
+    "    start_index = 0\n",
+    "    chunk_size = 500    # 한 번에 요청할 개수 (0~499는 500개)\n",
+    "\n",
+    "    print(\"데이터 수집을 시작합니다...\")\n",
+    "\n",
+    "    while True:\n",
+    "        # 1. 'from'과 'to' 파라미터를 동적으로 설정\n",
+    "        params = {\n",
+    "            \"dataset_key\": \"DATASET_SUNDO_69\",\n",
+    "            \"from\": start_index,\n",
+    "            \"to\": start_index + chunk_size - 1\n",
+    "        }\n",
+    "        \n",
+    "        print(f\"  -> {start_index}부터 {start_index + chunk_size - 1}까지 요청 중...\")\n",
+    "\n",
+    "        try:\n",
+    "            response = requests.get(url, headers=headers, params=params)\n",
+    "\n",
+    "            if response.status_code == 200:\n",
+    "                data = response.json()\n",
+    "                \n",
+    "                # 2. 'data' 키에서 실제 데이터 리스트를 가져옴\n",
+    "                data_chunk = data.get('data') # .get()을 사용하면 'data' 키가 없어도 오류 안남\n",
+    "\n",
+    "                # 3. 데이터가 비어있는지 확인\n",
+    "                if not data_chunk:\n",
+    "                    # 서버가 빈 리스트([])를 반환하면, 더 이상 데이터가 없다는 의미\n",
+    "                    print(\"✅ 모든 데이터를 수집했습니다. 반복을 종료합니다.\")\n",
+    "                    break\n",
+    "                \n",
+    "                # 4. (중요) 가져온 데이터를 '장바구니' 리스트에 추가\n",
+    "                all_data_list.extend(data_chunk)\n",
+    "                \n",
+    "                # 5. 다음 루프를 위해 시작 인덱스 업데이트\n",
+    "                start_index += chunk_size\n",
+    "                \n",
+    "                # (권장) API 서버에 대한 예의로, 요청 사이에 짧은 휴식 추가\n",
+    "                time.sleep(0.1) # 0.1초 대기\n",
+    "\n",
+    "            else:\n",
+    "                # API 호출 자체가 실패한 경우 (400, 404, 500 등)\n",
+    "                print(f\"❌ 오류 발생 (Status Code: {response.status_code})\")\n",
+    "                print(response.text)\n",
+    "                break # 오류 발생 시 반복 중단\n",
+    "\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            print(f\"연결 중 오류가 발생했습니다: {e}\")\n",
+    "            break # 오류 발생 시 반복 중단\n",
+    "\n",
+    "    # --- 반복문 종료 후 ---\n",
+    "    if all_data_list:\n",
+    "        # 6. '장바구니'에 모아둔 모든 데이터를 하나의 DataFrame으로 변환\n",
+    "        df_total = pd.DataFrame(all_data_list)\n",
+    "        df_total.to_csv(\"data_csv/숙박업_강원도_읍면동.csv\")\n",
+    "        print(\"\\n--- 최종 DataFrame 변환 결과 ---\")\n",
+    "        print(f\"총 {len(df_total)}개의 행(row)을 가져왔습니다.\")\n",
+    "        print(df_total.head())\n",
+    "    else:\n",
+    "        print(\"\\n가져온 데이터가 없습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7586bf0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 512 entries, 0 to 511\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   ANN_SALARY_AMT_SUBSUM   512 non-null    float64\n",
+      " 1   CTPRVN_CODE             512 non-null    int64  \n",
+      " 2   SIGNGU_CODE             512 non-null    int64  \n",
+      " 3   EMD_CODE                512 non-null    float64\n",
+      " 4   STLE_SE_CODE            512 non-null    object \n",
+      " 5   INDUST_LCLAS_CODE       512 non-null    float64\n",
+      " 6   MAIN_INDUST_SCLAS_CODE  512 non-null    object \n",
+      " 7   ONLINE_TRADE_EXST_ENNC  512 non-null    float64\n",
+      " 8   BULD_TOTAL_SUM          512 non-null    float64\n",
+      " 9   BULD_POSESN_TOTAL       512 non-null    float64\n",
+      " 10  BULD_LEASE_TOTAL        512 non-null    float64\n",
+      " 11  ROOM_CNT                512 non-null    float64\n",
+      " 12  SELNG_AMT               512 non-null    float64\n",
+      " 13  MAIN_INDUST_ICME        512 non-null    float64\n",
+      " 14  MAIN_INDUST_ELSE_ICME   512 non-null    float64\n",
+      " 15  BSN_COST                512 non-null    float64\n",
+      " 16  LEASE_CHRGE             512 non-null    float64\n",
+      " 17  ADVRTS_COST             512 non-null    float64\n",
+      " 18  BSN_PROFIT              512 non-null    float64\n",
+      " 19  SEEM_WORKER_SUM         512 non-null    float64\n",
+      "dtypes: float64(16), int64(2), object(2)\n",
+      "memory usage: 80.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df1 = pd.read_csv(\"data_csv/숙박업_강원도_읍면동.csv\")\n",
+    "#어떤 컬럼이 있는지 확인하기\n",
+    "df1.columns.tolist()\n",
+    "# 필요없는 컬럼들 제거하기\n",
+    "df2 = df1.drop(columns = ['Unnamed: 0','index'])\n",
+    "# 1.어떤 데이터로 구성되어 있는지 확인하기, int, float, object인지 확인하기!!\n",
+    "# 2.null 값 유무 있을시 dropna() 실행하기\n",
+    "df2.info()"
    ]
   }
  ],
