명목임금지수 데이터 정리 및 CSV 업로드

--- a/first_week/11_09_yr.ipynb
+++ b/first_week/11_09_yr.ipynb
@@ -181,8 +181,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "eff83a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Unnamed: 0', 'index', 'UPLFT_XCNTS', 'UPLFT_YDNTS', 'LOWRGT_XCNTS', 'LOWRGT_YDNTS', 'ID', 'BSNES_CNT', 'LABRR_CNT', 'LABRR_CNT_AVRG', 'SELNG_AMT', 'SELNG_AMT_AVRG', 'SPCE_INFO']\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21457 entries, 0 to 21456\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   index           21457 non-null  int64  \n",
+      " 1   UPLFT_XCNTS     21457 non-null  float64\n",
+      " 2   UPLFT_YDNTS     21457 non-null  float64\n",
+      " 3   LOWRGT_XCNTS    21457 non-null  float64\n",
+      " 4   LOWRGT_YDNTS    21457 non-null  float64\n",
+      " 5   ID              21457 non-null  int64  \n",
+      " 6   BSNES_CNT       410 non-null    float64\n",
+      " 7   LABRR_CNT       410 non-null    float64\n",
+      " 8   LABRR_CNT_AVRG  410 non-null    float64\n",
+      " 9   SELNG_AMT       410 non-null    float64\n",
+      " 10  SELNG_AMT_AVRG  410 non-null    float64\n",
+      " 11  SPCE_INFO       21457 non-null  object \n",
+      "dtypes: float64(9), int64(2), object(1)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>UPLFT_XCNTS</th>\n",
+       "      <th>UPLFT_YDNTS</th>\n",
+       "      <th>LOWRGT_XCNTS</th>\n",
+       "      <th>LOWRGT_YDNTS</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>BSNES_CNT</th>\n",
+       "      <th>LABRR_CNT</th>\n",
+       "      <th>LABRR_CNT_AVRG</th>\n",
+       "      <th>SELNG_AMT</th>\n",
+       "      <th>SELNG_AMT_AVRG</th>\n",
+       "      <th>SPCE_INFO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>71</td>\n",
+       "      <td>969828.0</td>\n",
+       "      <td>2029746.0</td>\n",
+       "      <td>970328.0</td>\n",
+       "      <td>2029246.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>1650.0</td>\n",
+       "      <td>POLYGON ((969828.1 2029745.8, 970328.1 2029745...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>72</td>\n",
+       "      <td>969828.0</td>\n",
+       "      <td>2029246.0</td>\n",
+       "      <td>970328.0</td>\n",
+       "      <td>2028746.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>POLYGON ((969828.1 2029245.8, 970328.1 2029245...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>406</td>\n",
+       "      <td>970328.0</td>\n",
+       "      <td>2030246.0</td>\n",
+       "      <td>970828.0</td>\n",
+       "      <td>2029746.0</td>\n",
+       "      <td>407</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>POLYGON ((970328.1 2030245.8, 970828.1 2030245...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>407</td>\n",
+       "      <td>970328.0</td>\n",
+       "      <td>2029746.0</td>\n",
+       "      <td>970828.0</td>\n",
+       "      <td>2029246.0</td>\n",
+       "      <td>408</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>POLYGON ((970328.1 2029745.8, 970828.1 2029745...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>408</td>\n",
+       "      <td>970328.0</td>\n",
+       "      <td>2029246.0</td>\n",
+       "      <td>970828.0</td>\n",
+       "      <td>2028746.0</td>\n",
+       "      <td>409</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>POLYGON ((970328.1 2029245.8, 970828.1 2029245...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index  UPLFT_XCNTS  UPLFT_YDNTS  LOWRGT_XCNTS  LOWRGT_YDNTS   ID  \\\n",
+       "71      71     969828.0    2029746.0      970328.0     2029246.0   72   \n",
+       "72      72     969828.0    2029246.0      970328.0     2028746.0   73   \n",
+       "406    406     970328.0    2030246.0      970828.0     2029746.0  407   \n",
+       "407    407     970328.0    2029746.0      970828.0     2029246.0  408   \n",
+       "408    408     970328.0    2029246.0      970828.0     2028746.0  409   \n",
+       "\n",
+       "     BSNES_CNT  LABRR_CNT  LABRR_CNT_AVRG  SELNG_AMT  SELNG_AMT_AVRG  \\\n",
+       "71         2.0        7.0             4.0     3300.0          1650.0   \n",
+       "72         1.0        1.0             1.0       50.0            50.0   \n",
+       "406        1.0        1.0             1.0      300.0           300.0   \n",
+       "407       10.0       26.0             3.0     4000.0           400.0   \n",
+       "408        4.0        8.0             2.0      450.0           113.0   \n",
+       "\n",
+       "                                             SPCE_INFO  \n",
+       "71   POLYGON ((969828.1 2029745.8, 970328.1 2029745...  \n",
+       "72   POLYGON ((969828.1 2029245.8, 970328.1 2029245...  \n",
+       "406  POLYGON ((970328.1 2030245.8, 970828.1 2030245...  \n",
+       "407  POLYGON ((970328.1 2029745.8, 970828.1 2029745...  \n",
+       "408  POLYGON ((970328.1 2029245.8, 970828.1 2029245...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. CSV 불러오기\n",
+    "df1 = pd.read_csv(\"명목임금지수.csv\", encoding='utf-8')\n",
+    "\n",
+    "# 2. 컬럼 확인\n",
+    "print(df1.columns.tolist())\n",
+    "\n",
+    "# 3. 필요 없는 컬럼 제거 (컬럼명 맞춰서 수정)\n",
+    "df2 = df1.drop(columns=['Unnamed: 0'], errors='ignore')\n",
+    "\n",
+    "# 4. 데이터 타입 확인\n",
+    "df2.info()\n",
+    "\n",
+    "# 5. NULL 값 제거\n",
+    "df2 = df2.dropna()\n",
+    "\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74c4d54e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "482235ad",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f78a4ac",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "29d24ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🚀 읍면동 전입 가구 수 데이터 다운로드 시작\n",
+      "\n",
+      "👉 요청: 0 ~ 499\n",
+      "👉 요청: 500 ~ 999\n",
+      "👉 요청: 1000 ~ 1499\n",
+      "👉 요청: 1500 ~ 1999\n",
+      "👉 요청: 2000 ~ 2499\n",
+      "👉 요청: 2500 ~ 2999\n",
+      "👉 요청: 3000 ~ 3499\n",
+      "👉 요청: 3500 ~ 3999\n",
+      "👉 요청: 4000 ~ 4499\n",
+      "👉 요청: 4500 ~ 4999\n",
+      "👉 요청: 5000 ~ 5499\n",
+      "👉 요청: 5500 ~ 5999\n",
+      "👉 요청: 6000 ~ 6499\n",
+      "👉 요청: 6500 ~ 6999\n",
+      "👉 요청: 7000 ~ 7499\n",
+      "👉 요청: 7500 ~ 7999\n",
+      "👉 요청: 8000 ~ 8499\n",
+      "👉 요청: 8500 ~ 8999\n",
+      "👉 요청: 9000 ~ 9499\n",
+      "👉 요청: 9500 ~ 9999\n",
+      "👉 요청: 10000 ~ 10499\n",
+      "👉 요청: 10500 ~ 10999\n",
+      "👉 요청: 11000 ~ 11499\n",
+      "👉 요청: 11500 ~ 11999\n",
+      "👉 요청: 12000 ~ 12499\n",
+      "👉 요청: 12500 ~ 12999\n",
+      "👉 요청: 13000 ~ 13499\n",
+      "👉 요청: 13500 ~ 13999\n",
+      "👉 요청: 14000 ~ 14499\n",
+      "👉 요청: 14500 ~ 14999\n",
+      "\n",
+      "✅ 모든 데이터를 성공적으로 수집했습니다!\n",
+      "\n",
+      "📌 총 14178개의 행을 수집했습니다.\n",
+      "💾 CSV 저장 완료 → 읍면동_전입가구수.csv\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# 1) .env 파일 불러오기\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"households_key\")   # ✅ 여기! 키 이름 정확하게\n",
+    "\n",
+    "if not api_key:\n",
+    "    raise ValueError(\"❌ .env 파일에서 'households_key' 값을 찾을 수 없습니다.\")\n",
+    "\n",
+    "# 2) API 기본 정보\n",
+    "url = \"https://dataapi.wehago.com/data/\"\n",
+    "headers = {\"apicode\": api_key}\n",
+    "dataset_key = \"DATASET_SUNDO_20\"   # ✅ 읍면동 전입 가구 수 데이터셋\n",
+    "\n",
+    "# 3) 반복 수집 세팅\n",
+    "all_rows = []\n",
+    "start = 0\n",
+    "chunk = 500  # 한 번 요청 당 500개\n",
+    "\n",
+    "print(\"\\n🚀 읍면동 전입 가구 수 데이터 다운로드 시작\\n\")\n",
+    "\n",
+    "while True:\n",
+    "    params = {\n",
+    "        \"dataset_key\": dataset_key,\n",
+    "        \"from\": start,\n",
+    "        \"to\": start + chunk - 1\n",
+    "    }\n",
+    "\n",
+    "    print(f\"👉 요청: {start} ~ {start + chunk - 1}\")\n",
+    "\n",
+    "    response = requests.get(url, headers=headers, params=params)\n",
+    "\n",
+    "    if response.status_code != 200:\n",
+    "        print(f\"❌ 오류 발생 (코드 {response.status_code})\\n{response.text}\")\n",
+    "        break\n",
+    "\n",
+    "    data_chunk = response.json().get(\"data\", [])\n",
+    "\n",
+    "    if not data_chunk:  # 더 이상 데이터 없으면 종료\n",
+    "        print(\"\\n✅ 모든 데이터를 성공적으로 수집했습니다!\")\n",
+    "        break\n",
+    "\n",
+    "    all_rows.extend(data_chunk)\n",
+    "    start += chunk\n",
+    "    time.sleep(0.1)  # 서버 과부하 방지\n",
+    "\n",
+    "# 4) DataFrame 변환 + CSV 저장\n",
+    "if all_rows:\n",
+    "    df = pd.DataFrame(all_rows)\n",
+    "    print(f\"\\n📌 총 {len(df)}개의 행을 수집했습니다.\")\n",
+    "    \n",
+    "    save_name = \"읍면동_전입가구수.csv\"\n",
+    "    df.to_csv(save_name, index=False, encoding=\"utf-8-sig\")\n",
+    "\n",
+    "    print(f\"💾 CSV 저장 완료 → {save_name}\\n\")\n",
+    "else:\n",
+    "    print(\"\\n⚠️ 가져온 데이터가 없습니다.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "45c2e79f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"읍면동_전입가구수.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "66b40570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.9.9)\n",
+      "Requirement already satisfied: python-dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (from dotenv) (1.2.1)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install dotenv "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0915c0bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14178 entries, 0 to 14177\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   index                 14178 non-null  int64  \n",
+      " 1   TRNSFRN_AREA          14178 non-null  object \n",
+      " 2   AVRG_AGE              14172 non-null  float64\n",
+      " 3   SEXDSTN               14178 non-null  object \n",
+      " 4   TRNSFRN_HSHLD_CNT_SM  14172 non-null  float64\n",
+      "dtypes: float64(2), int64(1), object(2)\n",
+      "memory usage: 554.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df1 = pd.read_csv(\"읍면동_전입가구수.csv\", encoding='utf-8')\n",
+    "#어떤 columns 있는지 확인 \n",
+    "df1.head()\n",
+    "#데이터프레임의 상위 5행을 출력\n",
+    "df1.columns.tolist()\n",
+    "#데이터프레임의 전체 구조 요약 정보 출력\n",
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c160110",
    "metadata": {},
    "outputs": [],
    "source": []
