11_09_yr이름 전입가구 수정

--- a/first_week/11_09_movinginhousehold.ipynb
+++ b/first_week/11_09_movinginhousehold.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6f8f82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "d808296d",
    "metadata": {},
@@ -397,53 +389,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "29d24ce1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🚀 읍면동 전입 가구 수 데이터 다운로드 시작\n",
-      "\n",
-      "👉 요청: 0 ~ 499\n",
-      "👉 요청: 500 ~ 999\n",
-      "👉 요청: 1000 ~ 1499\n",
-      "👉 요청: 1500 ~ 1999\n",
-      "👉 요청: 2000 ~ 2499\n",
-      "👉 요청: 2500 ~ 2999\n",
-      "👉 요청: 3000 ~ 3499\n",
-      "👉 요청: 3500 ~ 3999\n",
-      "👉 요청: 4000 ~ 4499\n",
-      "👉 요청: 4500 ~ 4999\n",
-      "👉 요청: 5000 ~ 5499\n",
-      "👉 요청: 5500 ~ 5999\n",
-      "👉 요청: 6000 ~ 6499\n",
-      "👉 요청: 6500 ~ 6999\n",
-      "👉 요청: 7000 ~ 7499\n",
-      "👉 요청: 7500 ~ 7999\n",
-      "👉 요청: 8000 ~ 8499\n",
-      "👉 요청: 8500 ~ 8999\n",
-      "👉 요청: 9000 ~ 9499\n",
-      "👉 요청: 9500 ~ 9999\n",
-      "👉 요청: 10000 ~ 10499\n",
-      "👉 요청: 10500 ~ 10999\n",
-      "👉 요청: 11000 ~ 11499\n",
-      "👉 요청: 11500 ~ 11999\n",
-      "👉 요청: 12000 ~ 12499\n",
-      "👉 요청: 12500 ~ 12999\n",
-      "👉 요청: 13000 ~ 13499\n",
-      "👉 요청: 13500 ~ 13999\n",
-      "👉 요청: 14000 ~ 14499\n",
-      "👉 요청: 14500 ~ 14999\n",
-      "\n",
-      "✅ 모든 데이터를 성공적으로 수집했습니다!\n",
-      "\n",
-      "📌 총 14178개의 행을 수집했습니다.\n",
-      "💾 CSV 저장 완료 → 읍면동_전입가구수.csv\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "❌ .env 파일에서 'households_key' 값을 찾을 수 없습니다.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m api_key = os.getenv(\u001b[33m\"\u001b[39m\u001b[33mhouseholds_key\u001b[39m\u001b[33m\"\u001b[39m)   \u001b[38;5;66;03m# ✅ 여기! 키 이름 정확하게\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m api_key:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m❌ .env 파일에서 \u001b[39m\u001b[33m'\u001b[39m\u001b[33mhouseholds_key\u001b[39m\u001b[33m'\u001b[39m\u001b[33m 값을 찾을 수 없습니다.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# 2) API 기본 정보\u001b[39;00m\n\u001b[32m     15\u001b[39m url = \u001b[33m\"\u001b[39m\u001b[33mhttps://dataapi.wehago.com/data/\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: ❌ .env 파일에서 'households_key' 값을 찾을 수 없습니다."
      ]
     }
    ],
@@ -545,27 +503,593 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0915c0bb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14178 entries, 0 to 14177\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column                Non-Null Count  Dtype  \n",
-      "---  ------                --------------  -----  \n",
-      " 0   index                 14178 non-null  int64  \n",
-      " 1   TRNSFRN_AREA          14178 non-null  object \n",
-      " 2   AVRG_AGE              14172 non-null  float64\n",
-      " 3   SEXDSTN               14178 non-null  object \n",
-      " 4   TRNSFRN_HSHLD_CNT_SM  14172 non-null  float64\n",
-      "dtypes: float64(2), int64(1), object(2)\n",
-      "memory usage: 554.0+ KB\n"
-     ]
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "TRNSFRN_AREA",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "AVRG_AGE",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "SEXDSTN",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "TRNSFRN_HSHLD_CNT_SM",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "d01f6706-4e2a-433c-be72-961d71d48213",
+       "rows": [
+        [
+         "0",
+         "0",
+         "강원도 강릉시 강남동",
+         "45.0",
+         "남",
+         "965.0"
+        ],
+        [
+         "1",
+         "1",
+         "강원도 강릉시 강남동",
+         "48.0",
+         "여",
+         "764.0"
+        ],
+        [
+         "2",
+         "2",
+         "강원도 강릉시 강동면",
+         "49.0",
+         "남",
+         "265.0"
+        ],
+        [
+         "3",
+         "3",
+         "강원도 강릉시 강동면",
+         "54.0",
+         "여",
+         "154.0"
+        ],
+        [
+         "4",
+         "4",
+         "강원도 강릉시 경포동",
+         "39.0",
+         "남",
+         "941.0"
+        ],
+        [
+         "5",
+         "5",
+         "강원도 강릉시 경포동",
+         "40.0",
+         "여",
+         "666.0"
+        ],
+        [
+         "6",
+         "6",
+         "강원도 강릉시 교1동",
+         "39.0",
+         "남",
+         "1906.0"
+        ],
+        [
+         "7",
+         "7",
+         "강원도 강릉시 교1동",
+         "42.0",
+         "여",
+         "1656.0"
+        ],
+        [
+         "8",
+         "8",
+         "강원도 강릉시 교2동",
+         "44.0",
+         "남",
+         "604.0"
+        ],
+        [
+         "9",
+         "9",
+         "강원도 강릉시 교2동",
+         "45.0",
+         "여",
+         "449.0"
+        ],
+        [
+         "10",
+         "10",
+         "강원도 강릉시 구정면",
+         "44.0",
+         "남",
+         "254.0"
+        ],
+        [
+         "11",
+         "11",
+         "강원도 강릉시 구정면",
+         "46.0",
+         "여",
+         "185.0"
+        ],
+        [
+         "12",
+         "12",
+         "강원도 강릉시 내곡동",
+         "39.0",
+         "남",
+         "1191.0"
+        ],
+        [
+         "13",
+         "13",
+         "강원도 강릉시 내곡동",
+         "40.0",
+         "여",
+         "849.0"
+        ],
+        [
+         "14",
+         "14",
+         "강원도 강릉시 사천면",
+         "47.0",
+         "남",
+         "345.0"
+        ],
+        [
+         "15",
+         "15",
+         "강원도 강릉시 사천면",
+         "45.0",
+         "여",
+         "228.0"
+        ],
+        [
+         "16",
+         "16",
+         "강원도 강릉시 성덕동",
+         "41.0",
+         "남",
+         "1639.0"
+        ],
+        [
+         "17",
+         "17",
+         "강원도 강릉시 성덕동",
+         "44.0",
+         "여",
+         "1250.0"
+        ],
+        [
+         "18",
+         "18",
+         "강원도 강릉시 성산면",
+         "49.0",
+         "남",
+         "209.0"
+        ],
+        [
+         "19",
+         "19",
+         "강원도 강릉시 성산면",
+         "51.0",
+         "여",
+         "135.0"
+        ],
+        [
+         "20",
+         "20",
+         "강원도 강릉시 송정동",
+         "46.0",
+         "남",
+         "1241.0"
+        ],
+        [
+         "21",
+         "21",
+         "강원도 강릉시 송정동",
+         "45.0",
+         "여",
+         "790.0"
+        ],
+        [
+         "22",
+         "22",
+         "강원도 강릉시 연곡면",
+         "47.0",
+         "남",
+         "496.0"
+        ],
+        [
+         "23",
+         "23",
+         "강원도 강릉시 연곡면",
+         "47.0",
+         "여",
+         "387.0"
+        ],
+        [
+         "24",
+         "24",
+         "강원도 강릉시 옥계면",
+         "50.0",
+         "남",
+         "238.0"
+        ],
+        [
+         "25",
+         "25",
+         "강원도 강릉시 옥계면",
+         "51.0",
+         "여",
+         "138.0"
+        ],
+        [
+         "26",
+         "26",
+         "강원도 강릉시 옥천동",
+         "48.0",
+         "남",
+         "322.0"
+        ],
+        [
+         "27",
+         "27",
+         "강원도 강릉시 옥천동",
+         "49.0",
+         "여",
+         "246.0"
+        ],
+        [
+         "28",
+         "28",
+         "강원도 강릉시 왕산면",
+         "53.0",
+         "남",
+         "83.0"
+        ],
+        [
+         "29",
+         "29",
+         "강원도 강릉시 왕산면",
+         "58.0",
+         "여",
+         "50.0"
+        ],
+        [
+         "30",
+         "30",
+         "강원도 강릉시 주문진읍",
+         "47.0",
+         "남",
+         "1086.0"
+        ],
+        [
+         "31",
+         "31",
+         "강원도 강릉시 주문진읍",
+         "50.0",
+         "여",
+         "880.0"
+        ],
+        [
+         "32",
+         "32",
+         "강원도 강릉시 중앙동",
+         "45.0",
+         "남",
+         "422.0"
+        ],
+        [
+         "33",
+         "33",
+         "강원도 강릉시 중앙동",
+         "46.0",
+         "여",
+         "421.0"
+        ],
+        [
+         "34",
+         "34",
+         "강원도 강릉시 초당동",
+         "45.0",
+         "남",
+         "363.0"
+        ],
+        [
+         "35",
+         "35",
+         "강원도 강릉시 초당동",
+         "46.0",
+         "여",
+         "281.0"
+        ],
+        [
+         "36",
+         "36",
+         "강원도 강릉시 포남1동",
+         "44.0",
+         "남",
+         "811.0"
+        ],
+        [
+         "37",
+         "37",
+         "강원도 강릉시 포남1동",
+         "46.0",
+         "여",
+         "631.0"
+        ],
+        [
+         "38",
+         "38",
+         "강원도 강릉시 포남2동",
+         "43.0",
+         "남",
+         "965.0"
+        ],
+        [
+         "39",
+         "39",
+         "강원도 강릉시 포남2동",
+         "44.0",
+         "여",
+         "840.0"
+        ],
+        [
+         "40",
+         "40",
+         "강원도 강릉시 홍제동",
+         "43.0",
+         "남",
+         "982.0"
+        ],
+        [
+         "41",
+         "41",
+         "강원도 강릉시 홍제동",
+         "42.0",
+         "여",
+         "877.0"
+        ],
+        [
+         "42",
+         "42",
+         "강원도 고성군 간성읍",
+         "41.0",
+         "남",
+         "501.0"
+        ],
+        [
+         "43",
+         "43",
+         "강원도 고성군 간성읍",
+         "45.0",
+         "여",
+         "297.0"
+        ],
+        [
+         "44",
+         "44",
+         "강원도 고성군 거진읍",
+         "48.0",
+         "남",
+         "348.0"
+        ],
+        [
+         "45",
+         "45",
+         "강원도 고성군 거진읍",
+         "51.0",
+         "여",
+         "294.0"
+        ],
+        [
+         "46",
+         "46",
+         "강원도 고성군 죽왕면",
+         "45.0",
+         "남",
+         "298.0"
+        ],
+        [
+         "47",
+         "47",
+         "강원도 고성군 죽왕면",
+         "46.0",
+         "여",
+         "169.0"
+        ],
+        [
+         "48",
+         "48",
+         "강원도 고성군 토성면",
+         "45.0",
+         "남",
+         "691.0"
+        ],
+        [
+         "49",
+         "49",
+         "강원도 고성군 토성면",
+         "46.0",
+         "여",
+         "481.0"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 14178
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>TRNSFRN_AREA</th>\n",
+       "      <th>AVRG_AGE</th>\n",
+       "      <th>SEXDSTN</th>\n",
+       "      <th>TRNSFRN_HSHLD_CNT_SM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>강원도 강릉시 강남동</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>남</td>\n",
+       "      <td>965.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>강원도 강릉시 강남동</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>여</td>\n",
+       "      <td>764.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>강원도 강릉시 강동면</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>남</td>\n",
+       "      <td>265.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>강원도 강릉시 강동면</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>여</td>\n",
+       "      <td>154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>강원도 강릉시 경포동</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>남</td>\n",
+       "      <td>941.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14173</th>\n",
+       "      <td>201</td>\n",
+       "      <td>충청북도 충주시 지현동</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>여</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14174</th>\n",
+       "      <td>202</td>\n",
+       "      <td>충청북도 충주시 칠금.금릉동</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>남</td>\n",
+       "      <td>625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14175</th>\n",
+       "      <td>203</td>\n",
+       "      <td>충청북도 충주시 칠금.금릉동</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>여</td>\n",
+       "      <td>319.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14176</th>\n",
+       "      <td>204</td>\n",
+       "      <td>충청북도 충주시 호암.직동</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>여</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14177</th>\n",
+       "      <td>205</td>\n",
+       "      <td>충청북도 충주시 호암.직동</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>남</td>\n",
+       "      <td>263.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14178 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index     TRNSFRN_AREA  AVRG_AGE SEXDSTN  TRNSFRN_HSHLD_CNT_SM\n",
+       "0          0      강원도 강릉시 강남동      45.0       남                 965.0\n",
+       "1          1      강원도 강릉시 강남동      48.0       여                 764.0\n",
+       "2          2      강원도 강릉시 강동면      49.0       남                 265.0\n",
+       "3          3      강원도 강릉시 강동면      54.0       여                 154.0\n",
+       "4          4      강원도 강릉시 경포동      39.0       남                 941.0\n",
+       "...      ...              ...       ...     ...                   ...\n",
+       "14173    201     충청북도 충주시 지현동      46.0       여                 146.0\n",
+       "14174    202  충청북도 충주시 칠금.금릉동      43.0       남                 625.0\n",
+       "14175    203  충청북도 충주시 칠금.금릉동      47.0       여                 319.0\n",
+       "14176    204   충청북도 충주시 호암.직동      49.0       여                 188.0\n",
+       "14177    205   충청북도 충주시 호암.직동      44.0       남                 263.0\n",
+       "\n",
+       "[14178 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -576,7 +1100,7 @@
     "#데이터프레임의 상위 5행을 출력\n",
     "df1.columns.tolist()\n",
     "#데이터프레임의 전체 구조 요약 정보 출력\n",
-    "df1.info()"
+    "df1"
    ]
   },
   {
@@ -604,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
