--- a/first_week/11_09_wage.ipynb
+++ b/first_week/11_09_wage.ipynb
@@ -11,10 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "949e054d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 수집을 시작합니다...\n",
+      "  -> 0부터 499까지 요청 중...\n",
+      "✅ 모든 데이터를 수집했습니다. 반복을 종료합니다.\n",
+      "\n",
+      "가져온 데이터가 없습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -44,7 +56,7 @@
     "    while True:\n",
     "        # 1. 'from'과 'to' 파라미터를 동적으로 설정\n",
     "        params = {\n",
-    "            \"dataset_key\": \"DATASET_SUNDO_11\",\n",
+    "            \"dataset_key\": \"DATASET_KPC_14\",\n",
     "            \"from\": start_index,\n",
     "            \"to\": start_index + chunk_size - 1\n",
     "        }\n",
@@ -94,31 +106,88 @@
     "        print(f\"총 {len(df_total)}개의 행(row)을 가져왔습니다.\")\n",
     "        print(df_total.head())\n",
     "    else:\n",
-    "        print(\"\\n가져온 데이터가 없습니다.\")"
+    "        print(\"\\n가져온 데이터가 없습니다.\")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c53b290",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "923f88b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_total' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_total\u001b[49m.to_csv(\u001b[33m'\u001b[39m\u001b[33m명목임금지수.csv\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_total' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df_total.to_csv('명목임금지수.csv')"
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7e538111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.9.9)\n",
+      "Requirement already satisfied: python-dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (from dotenv) (1.2.1)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install dotenv "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e538111",
+   "id": "b41bc37b",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
