--- a/first_week/11_09_wage.ipynb
+++ b/first_week/11_09_wage.ipynb
@@ -1,18 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "770f2989",
-   "metadata": {},
-   "source": [
-    "## 명목임금지수\n",
-    "## https://bigdata-sme.kr/#/datastore/detail/statistics/DATASET_KPC_14"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "949e054d",
+   "execution_count": 1,
+   "id": "0e7fb0ba",
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c53b290",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "923f88b9",
+   "execution_count": 2,
+   "id": "c1fcc49e",
    "metadata": {},
    "outputs": [
     {
@@ -137,38 +120,18 @@
     }
    ],
    "source": [
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7e538111",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.9.9)\n",
-      "Requirement already satisfied: python-dotenv in /usr/local/python/3.12.1/lib/python3.12/site-packages (from dotenv) (1.2.1)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install dotenv "
+    "df_total.to_csv('명목임금지수.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41bc37b",
+   "id": "10b7eafa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install dotenv "
+   ]
   }
  ],
  "metadata": {
