--- a/first_week/11_09_wage.ipynb
+++ b/first_week/11_09_wage.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "88dcf3a6",
+   "metadata": {},
+   "source": [
+    "## 명목임금지수\n",
+    "## https://bigdata-sme.kr/#/datastore/detail/statistics/DATASET_KPC_14"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0e7fb0ba",
    "metadata": {},
    "outputs": [
